; ModuleID = '/home/carl/AnghaBench/reactos/drivers/bus/acpi/extr_osl.c_AcpiOsAcquireMutex.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/bus/acpi/extr_osl.c_AcpiOsAcquireMutex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"Bad parameter\0A\00", align 1
@AE_BAD_PARAMETER = common dso_local global i32 0, align 4
@ACPI_DO_NOT_WAIT = common dso_local global i64 0, align 8
@AE_TIME = common dso_local global i32 0, align 4
@AE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @AcpiOsAcquireMutex(i64 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %4, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = call i32 @DPRINT1(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %10 = load i32, i32* @AE_BAD_PARAMETER, align 4
  store i32 %10, i32* %3, align 4
  br label %29

11:                                               ; preds = %2
  %12 = load i64, i64* %5, align 8
  %13 = load i64, i64* @ACPI_DO_NOT_WAIT, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %23

15:                                               ; preds = %11
  %16 = load i64, i64* %4, align 8
  %17 = trunc i64 %16 to i32
  %18 = call i32 @ExTryToAcquireFastMutex(i32 %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %22, label %20

20:                                               ; preds = %15
  %21 = load i32, i32* @AE_TIME, align 4
  store i32 %21, i32* %3, align 4
  br label %29

22:                                               ; preds = %15
  br label %27

23:                                               ; preds = %11
  %24 = load i64, i64* %4, align 8
  %25 = trunc i64 %24 to i32
  %26 = call i32 @ExAcquireFastMutex(i32 %25)
  br label %27

27:                                               ; preds = %23, %22
  %28 = load i32, i32* @AE_OK, align 4
  store i32 %28, i32* %3, align 4
  br label %29

29:                                               ; preds = %27, %20, %8
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32 @DPRINT1(i8*) #1

declare dso_local i32 @ExTryToAcquireFastMutex(i32) #1

declare dso_local i32 @ExAcquireFastMutex(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
